--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div class="contenedor">
             <h1>Refugio Gatitos Arcoiris</h1>
                 <div class="contenedor1">
-            <p1>INICIO</p1>
-            <P2>COMO ADOPTAR</P2>
-            <P3>CONTACTANOS</P3>
+            <h2>INICIO</h2>
+            <h2>COMO ADOPTAR</h2>
+            <h2>CONTACTANOS</h2>
                 </div> <!-- contenedor1 -->
         </div> <!-- contenedor -->
     </section> <!-- cabecera -->
