--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Área de Ayuda -->
      <section id="ayuda" class="espaciado">
         <div class="contenedor">
-            <h4>Refugio Gatitos Arcoíris</h4>
+            <h4>Sin Contenido</h4>
         </div> <!-- contenedor -->
             <div class="fila2">
                 <div class="columna">
@@ -52,8 +52,8 @@
                 <div class="columna">
                     <h5>Información</h5>
                     <p>Inicio</p>
-                    <p>Como adoptar</p>
-                    <p>Contáctanos</p>
+                    <p></p>
+                    <p>ContáctanosS</p>
                 </div> <!-- columna -->
 
                 <div class="columna">
