--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Área de la cabecera -->
     <section id="cabecera">
         <div class="contenedor">
-            <h1>CLIPS PARAGUAY</h1>
+            <h1 id="titulo">CLIPS PARAGUAY</h1>
                 <div class="contenedor1">
             <h2>INICIO</h2>
             <h2>SUBIR CLIPS</h2>
@@ -24,7 +24,7 @@
     </section> <!-- cabecera -->
 
     <!-- Área de clips-->
-    <section id="clips" class="espacip_clip">
+    <section id="clips" class="espacio_clip">
         <div class="Mejores Clips">
             <h2><a href="https://www.twitch.tv/el_yisuspy" target="_blank" rel="external">Clip de EL_YISUSPY</a></h2>
             <h1><iframe src="https://player.vimeo.com/video/713884907?h=ed22b73283" width="680" height="664" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></h1>
