--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
         </div> <!-- contenedor -->
             <div class="fila2">
                 <div class="columna">
-                    <h5>Ayuda</h5>
-                    <p>FAQs</p>
                     <p>Políticas de privacidad</p>
                     <p>Ayuda</p>
                 </div> <!-- columna -->
@@ -52,13 +50,14 @@
                 <div class="columna">
                     <h5>Información</h5>
                     <p>Inicio</p>
-                    <p></p>
-                    <p>ContáctanosS</p>
+                    <p>Contáctanos</p>
                 </div> <!-- columna -->
 
                 <div class="columna">
-                    <h5>Redes Sociales</h5>
-                    <p>Facebook</p>
+                    <h4>Redes Sociales</h4>
+                    <a href="">
+                        <p>Facebook</p>
+                    </a>
                     <p>Instagram</p>
                     <p>Twitter</p>
                 </div> <!-- columna -->
