--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <section id="clips" class="espacio_clip">
         <div class="Mejores Clips">
             <h2><a href="https://www.twitch.tv/el_yisuspy" target="_blank" rel="external">Clip de EL_YISUSPY</a></h2>
-            <h1><iframe src="https://player.vimeo.com/video/713884907?h=ed22b73283" width="680" height="664" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></h1>
+            <h1 id="video_clip"><iframe src="https://player.vimeo.com/video/713884907?h=ed22b73283" width="480" height="415" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></h1>
             <P><strong>¡Gracias Por ver!</strong></P>    
         </div> <!-- contenedor -->
     </section> <!-- Hogar --> 
